kube/ext-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: service-web-ext
spec:
    selector:
        app: web
    type: LoadBalancer
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
          nodePort: 30001
