kube/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: service-web
spec:
    selector:
        app: web
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
