kube/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
    name: ingress-app

    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
    rules:
        - host: app.dev
          http:
              paths:
                  - path: /
                    pathType: Prefix

                    backend:
                        service:
                            name: service-web
                            port:
                                number: 80
